--- a/src/app/usuarios/login/login.component.html
+++ b/src/app/usuarios/login/login.component.html
@@ -6,9 +6,10 @@
                     <hr class="login-hr">
                     <p class="subtitle has-text-black">Introduzca sus credenciales para continuar.</p>
                     <div class="box">
-                        <figure class="avatar">
-                            <img src="https://placehold.it/128x128">
-                        </figure>
+                        <div *ngIf="loginError == true" class="notification is-danger">
+                            {{ errorMessage }}
+                        </div>
+
                         <form>
                             <div class="field">
                                 <div class="control">
