FEATURE: Cesta. Revertido a original

--- a/src/app/tienda/productos/productos.component.html
+++ b/src/app/tienda/productos/productos.component.html
@@ -14,7 +14,8 @@
                             <div class="media">
                                 <div class="media-content">
                                     <p class="title is-4 no-padding">{{p.nombre}}</p>
-                                    <p class="is-6">{{p.descripcion}}</p>
+                                    <p class="is-fullheight is-primary">{{ p.descripcion }}</p>
+                                    <!--  <p class="is-6">{{p.descripcion}}</p> -->
                                 </div>
                             </div>
                             <p><strong>{{ p.precio }}</strong></p>
