--- a/src/app/tienda/sidebar/sidebar.component.html
+++ b/src/app/tienda/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
     <!-- Sidebar -->
-    <div *ngIf="usuario != null" class="section">
+    <div class="section">
 
             <div class="columns">
                 <div class="column is is-three-quarters">
