--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+.card {
+    /* border: 2px solid black; */
+    border-radius: 0.5rem;
+    height: 100%;
+}
